chunking for ec calc

--- a/tests/testCmip6Dates.ipynb
+++ b/tests/testCmip6Dates.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ee5236cc-7428-45d9-a928-f15ebd312d0f",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6a105bc2-91b1-4d3b-9eab-22a223878896",
    "metadata": {
     "tags": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8018dc52-07fe-4c89-adf5-08d2b5ab276e",
    "metadata": {},
    "outputs": [],
@@ -70,13 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b06d28f3-08e7-462f-88fc-799662df1c89",
    "metadata": {},
    "outputs": [],
    "source": [
     "deckSet=['piControl','historical']\n",
-    "scenarioSet=['ssp126', 'ssp245', 'ssp370','ssp585']\n",
+    "scenarioSet=[#'ssp126', 'ssp245', 'ssp370',\n",
+    "    'ssp585']\n",
     "experimentSet=[*deckSet, *scenarioSet]"
    ]
   },
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "19ff8de8-255e-445c-91fd-ae76357c3e25",
    "metadata": {},
    "outputs": [],
@@ -103,95 +104,7 @@
    "execution_count": null,
    "id": "88772243-39f6-421f-af92-965cf2e54992",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0['CSIRO-ARCCSS' 'ACCESS-CM2' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "CMIP6.CMIP.CSIRO-ARCCSS.ACCESS-CM2.piControl.r1i1p1f1.Omon.tos.gn.v20191112|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.CMIP.CSIRO-ARCCSS.ACCESS-CM2.piControl.r1i1p1f1.Omon.tos.gn.v20191112|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.CMIP.CSIRO-ARCCSS.ACCESS-CM2.piControl.r1i1p1f1.Omon.tos.gn.v20191112|esgf3.dkrz.de downloading\n",
-      "CMIP6.CMIP.CSIRO-ARCCSS.ACCESS-CM2.piControl.r1i1p1f1.Omon.tos.gn.v20191112|esgf.nci.org.au downloading\n",
-      "CMIP6.CMIP.CSIRO-ARCCSS.ACCESS-CM2.piControl.r1i1p1f1.Omon.tos.gn.v20191112|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp126.r1i1p1f1.Omon.tos.gn.v20210317|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp126.r1i1p1f1.Omon.tos.gn.v20210317|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp126.r1i1p1f1.Omon.tos.gn.v20210317|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp126.r1i1p1f1.Omon.tos.gn.v20210317|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp245.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp245.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp245.r1i1p1f1.Omon.tos.gn.v20191108|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp245.r1i1p1f1.Omon.tos.gn.v20191108|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp245.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp370.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp370.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp370.r1i1p1f1.Omon.tos.gn.v20191108|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp370.r1i1p1f1.Omon.tos.gn.v20191108|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO-ARCCSS.ACCESS-CM2.ssp370.r1i1p1f1.Omon.tos.gn.v20191108|esgf-data3.ceda.ac.uk downloading\n",
-      "1['CSIRO' 'ACCESS-ESM1-5' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "CMIP6.CMIP.CSIRO.ACCESS-ESM1-5.piControl.r1i1p1f1.Omon.tos.gn.v20210316|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.CMIP.CSIRO.ACCESS-ESM1-5.piControl.r1i1p1f1.Omon.tos.gn.v20210316|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.CMIP.CSIRO.ACCESS-ESM1-5.piControl.r1i1p1f1.Omon.tos.gn.v20210316|esgf.nci.org.au downloading\n",
-      "CMIP6.CMIP.CSIRO.ACCESS-ESM1-5.piControl.r1i1p1f1.Omon.tos.gn.v20191214|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.CSIRO.ACCESS-ESM1-5.ssp126.r1i1p1f1.Omon.tos.gn.v20210318|esgf-data1.llnl.gov downloading\n",
-      "Error loading available shards\n",
-      "CMIP6.ScenarioMIP.CSIRO.ACCESS-ESM1-5.ssp245.r1i1p1f1.Omon.tos.gn.v20191115|esgf-data3.diasjp.net downloading\n",
-      "Error loading available shards\n",
-      "CMIP6.ScenarioMIP.CSIRO.ACCESS-ESM1-5.ssp370.r1i1p1f1.Omon.tos.gn.v20191115|esgf-data3.diasjp.net downloading\n",
-      "Error loading available shards\n",
-      "2['AWI' 'AWI-CM-1-1-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "CMIP6.CMIP.AWI.AWI-CM-1-1-MR.piControl.r1i1p1f1.Omon.tos.gn.v20181218|aims3.llnl.gov downloading\n",
-      "CMIP6.CMIP.AWI.AWI-CM-1-1-MR.piControl.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.CMIP.AWI.AWI-CM-1-1-MR.piControl.r1i1p1f1.Omon.tos.gn.v20181218|esgf3.dkrz.de downloading\n",
-      "CMIP6.CMIP.AWI.AWI-CM-1-1-MR.piControl.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp126.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp126.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp126.r1i1p1f1.Omon.tos.gn.v20181218|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp126.r1i1p1f1.Omon.tos.gn.v20181218|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp126.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp245.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp245.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp245.r1i1p1f1.Omon.tos.gn.v20181218|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp245.r1i1p1f1.Omon.tos.gn.v20181218|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp245.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp370.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp370.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp370.r1i1p1f1.Omon.tos.gn.v20181218|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp370.r1i1p1f1.Omon.tos.gn.v20181218|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.AWI.AWI-CM-1-1-MR.ssp370.r1i1p1f1.Omon.tos.gn.v20181218|esgf-data3.ceda.ac.uk downloading\n",
-      "3['BCC' 'BCC-CSM2-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "the new name 'lat' conflicts\n",
-      "the new name 'lat' conflicts\n",
-      "the new name 'lat' conflicts\n",
-      "the new name 'lat' conflicts\n",
-      "the new name 'lat' conflicts\n",
-      "the new name 'lat' conflicts\n",
-      "4['CAMS' 'CAMS-CSM1-0' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "5['CAS' 'CAS-ESM2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "[Errno -51] NetCDF: Unknown file format: b'/mnt/e/CMIP5-PMIP3/CMIP6/tos_Omon_CAS-ESM2-0_piControl_r1i1p1f1_gn_000101-009912.nc'\n",
-      "6['NCAR' 'CESM2' 'r1i1p1f1' 'r10i1p1f1']\n",
-      "7['NCAR' 'CESM2-WACCM' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "8['THU' 'CIESM' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/CIESM_ssp370.nc'\n",
-      "9['CMCC' 'CMCC-CM2-SR5' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "10['CMCC' 'CMCC-ESM2' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "11['CNRM-CERFACS' 'CNRM-CM6-1' 'r1i1p1f2_gn' 'r1i1p1f2_gn']\n",
-      "CNRM-CM6-1ts_AmonpiControlr1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_piControl_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "CNRM-CM6-1ts_Amonhistoricalr1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_historical_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "CNRM-CM6-1ts_Amonssp126r1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_ssp126_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "CNRM-CM6-1ts_Amonssp245r1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_ssp245_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "CNRM-CM6-1ts_Amonssp370r1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_ssp370_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "CNRM-CM6-1ts_Amonssp585r1i1p1f2_gn file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CNRM-CM6-1_ssp585_r1i1p1f2_gn_.* ) not found, possibly test name is wrong\n",
-      "12['CNRM-CERFACS' 'CNRM-ESM2-1' 'r1i1p1f2' 'r1i1p1f2']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for all models ....\n",
     "for i in range(0,len(modelSet)):\n",
