--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d436bfc",
    "metadata": {
     "tags": []
    },
@@ -18,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2bc3c810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb485dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9d0a16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +57,8 @@
     "        (tsXr.lon>=140) & (tsXr.lon<=280),\n",
     "        drop=True\n",
     "    )\n",
+    "    \n",
+    "    tsXr=tsXr.chunk(-1, 'auto', 'auto')\n",
     "    \n",
     "    trendXr = tsXr.polyfit('time', 2)\n",
     "    \n",
@@ -75,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b279b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7dc51a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a847e433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
