--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,72 +83,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "#modelSet=numpy.array([\n",
-    "    0#['CSIRO-ARCCSS', 'ACCESS-CM2', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    1#['CSIRO', 'ACCESS-ESM1-5', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    2#['AWI', 'AWI-CM-1-1-MR', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    3#['BCC', 'BCC-CSM2-MR', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    4#['CAMS', 'CAMS-CSM1-0', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    5#['CAS', 'CAS-ESM2-0', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    6#['NCAR', 'CESM2', 'r1i1p1f1', 'r10i1p1f1'],\n",
-    "    7#['NCAR', 'CESM2-WACCM', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    8#['THU', 'CIESM', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    9#['CMCC', 'CMCC-CM2-SR5', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    10#['CMCC', 'CMCC-ESM2', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    11#['CNRM-CERFACS', 'CNRM-CM6-1', 'r1i1p1f2', 'r1i1p1f2'],\n",
-    "    12#['CNRM-CERFACS', 'CNRM-ESM2-1', 'r1i1p1f2', 'r1i1p1f2'],\n",
-    "    13#['CCCma', 'CanESM5', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    14#['CCCma', 'CanESM5-CanOE', 'r1i1p2f1', 'r1i1p2f1'],\n",
-    "    15#['EC-Earth-Consortium', 'EC-Earth3', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    16#['EC-Earth-Consortium', 'EC-Earth3-CC', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    17#['EC-Earth-Consortium', 'EC-Earth3-Veg', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    18#['EC-Earth-Consortium', 'EC-Earth3-Veg-LR', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    19#['NOAA-GFDL', 'GFDL-CM4', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    20#['NOAA-GFDL', 'GFDL-ESM4', 'r1i1p1f1', 'r1i1p1f1'], #where is piControl?\n",
-    "    21#['NASA-GISS', 'GISS-E2-1-G', 'r1i1p1f2', 'r1i1p1f2'],\n",
-    "    22#['MOHC', 'HadGEM3-GC31-LL', 'r1i1p1f1', 'r1i1p1f3'], #NB the piControl used a slightly older version of the forcings.\n",
-    "    23#['MOHC', 'HadGEM3-GC31-MM', 'r1i1p1f1', 'r1i1p1f3'],\n",
-    "    24#['INM', 'INM-CM4-8', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    25#['INM', 'INM-CM5-0', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    26#['IPSL', 'IPSL-CM6A-LR', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    27#['NIMS-KMA', 'KACE-1-0-G', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    28#['UA', 'MCM-UA-1-0', 'r1i1p1f1', 'r1i1p1f2'],\n",
-    "    29#['MIROC', 'MIROC-ES2L', 'r1i1p1f2', 'r1i1p1f2'],\n",
-    "    30#['MIROC', 'MIROC6', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    31#['MPI-M', 'MPI-ESM1-2-HR', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    32#['MPI-M', 'MPI-ESM1-2-LR', 'r1i1p1f1', 'r1i1p1f2'],\n",
-    "    33#['MRI', 'MRI-ESM2-0', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    34#['NUIST', 'NESM3', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    35#['NCC', 'NorESM2-LM', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    36#['NCC', 'NorESM2-MM', 'r1i1p1f1', 'r1i1p1f1'],\n",
-    "    37#['MOHC', 'UKESM1-0-LL', 'r1i1p1f2', 'r1i1p1f2']\n",
-    "#])\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelSet=_model.scenarioMip[[3,5],:]"
+    "modelSet=_model.scenarioMip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(modelSet)"
    ]
@@ -176,9 +132,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NOAA-GFDL' 'GFDL-ESM4' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "GFDL-ESM4 starting\n",
+      "['NASA-GISS' 'GISS-E2-1-G' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "GISS-E2-1-G starting\n",
+      "['MOHC' 'HadGEM3-GC31-LL' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "HadGEM3-GC31-LL starting\n",
+      "['MOHC' 'HadGEM3-GC31-MM' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "HadGEM3-GC31-MM starting\n"
+     ]
+    }
+   ],
    "source": [
-    "for iModel in modelSet:\n",
+    "for iModel in modelSet[20:,:]:\n",
     "    \n",
     "    print(iModel)\n",
     "    \n",
@@ -187,11 +158,11 @@
     "        \n",
     "        print(iModel[1] + ' starting') \n",
     "        #SST\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).ts.to_dataset()\n",
+    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).tos.to_dataset()\n",
     "        controlDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
     "        sstClimat=sst.calculateClimatology(controlDs)\n",
     "\n",
-    "        [sstClimat[i].to_netcdf('results/cmipMonthlyIndeces/sstClimat'+iModel[1]+i+'.nc')\n",
+    "        [sstClimat[i].to_netcdf('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
     "             for i in sstIndeces]\n",
     "\n",
     "        pslControlDs=fh.loadModelData(iModel[1], 'psl_Amon', 'piControl', iModel[2])\n",
@@ -219,9 +190,9 @@
     "        sstClimat=dict()\n",
     "\n",
     "        for i in sstIndeces:\n",
-    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstClimat'+iModel[1]+i+'.nc')\n",
+    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
     "        #the piControl\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).ts.to_dataset()\n",
+    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).tos.to_dataset()\n",
     "        controlDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
     "        sstIndex = sst.calculateIndex(controlDs, sstClimat) \n",
     "        \n",
@@ -233,7 +204,7 @@
     "        indeces.assign_attrs(climatology='full length of pi Control')\n",
     "        print('Caclulating control ...')\n",
     "        tp.averageForTimePeriod(indeces).to_netcdf(\n",
-    "            'results/cmipWarmSeasonIndeces/'+iModel[1]+'_piControl.nc')\n",
+    "            'results/cmipWarmSeasonIndeces/'+iModel[1]+'tospiControl.nc')\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(iModel[1] + \"piControl did not calculate\")\n",
@@ -262,11 +233,11 @@
     "        sstClimat=dict()\n",
     "\n",
     "        for i in sstIndeces:\n",
-    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstClimat'+iModel[1]+i+'.nc')\n",
+    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
     "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
     "\n",
     "        #historical\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'historical', iModel[3]).ts.to_dataset()\n",
+    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'historical', iModel[3]).tos.to_dataset()\n",
     "        #sstDs = xarray.merge([tsDs.ts, fxDs.areacella])\n",
     "        sstDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
     "\n",
@@ -280,8 +251,8 @@
     "        print('Caclulating historical ...')\n",
     "\n",
     "        #save the results to file\n",
-    "        indeces.to_netcdf('results/cmipMonthlyIndeces/'+iModel[1]+'_historical.nc')\n",
-    "        tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'_historical.nc')\n",
+    "        indeces.to_netcdf('results/cmipMonthlyIndeces/'+iModel[1]+'toshistorical.nc')\n",
+    "        tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'toshistorical.nc')\n",
     "\n",
     "    except Exception as e:\n",
     "        print(iModel[1] + \"historical did not calculate\")\n",
@@ -309,7 +280,7 @@
     "    try: \n",
     "\n",
     "#ref to the saved files\n",
-    "        historicalIndeces = xarray.open_dataset('results/cmipMonthlyIndeces/'+iModel[1]+'_historical.nc')\n",
+    "        historicalIndeces = xarray.open_dataset('results/cmipMonthlyIndeces/'+iModel[1]+'toshistorical.nc')\n",
     "        \n",
     "        sstClimat=dict()\n",
     "        \n",
@@ -321,7 +292,7 @@
     "            try:\n",
     "                variant = iModel[3]\n",
     "                \n",
-    "                tsDs = fh.loadModelData(iModel[1], 'tos_Omon', experiment, variant).ts.to_dataset()\n",
+    "                tsDs = fh.loadModelData(iModel[1], 'tos_Omon', experiment, variant).tos.to_dataset()\n",
     "                #sstDs = xarray.merge([tsDs.ts, fxDs.areacella])\n",
     "                sstDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
     "\n",
@@ -338,7 +309,7 @@
     "                indeces.assign_attrs(climatology='full length of pi Control')\n",
     "                #print(indeces)\n",
     "                print('Caclulating ...')\n",
-    "                tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'_'+experiment + '.nc')\n",
+    "                tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'tos'+experiment + '.nc')\n",
     "\n",
     "            except Exception as e:\n",
     "                print(iModel[1] + experiment + \" not completed: \")\n",
@@ -382,7 +353,7 @@
     "\n",
     "    for model in _model.scenarioMip[:,1]:\n",
     "        try:\n",
-    "            indecesDs = xarray.open_dataset('results/cmipWarmSeasonIndeces/' + model +'_'+ experiment + '.nc')\n",
+    "            indecesDs = xarray.open_dataset('results/cmipWarmSeasonIndeces/' + model +'tos'+ experiment + '.nc')\n",
     "            indecesDs['model']=model\n",
     "            timePIndeces.append(indecesDs)\n",
     "        except Exception as e:\n",
@@ -391,7 +362,7 @@
     "\n",
     "    results=results.assign_attrs({'experiment':experiment,**indecesDs.attrs,**_index.monthsOfInterest})\n",
     "\n",
-    "    results.to_netcdf('results/cmip6'+experiment+'TradIndeces.nc')"
+    "    results.to_netcdf('results/cmip6'+experiment+'TradIndecestos.nc')"
    ]
   },
   {
@@ -407,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results=xarray.open_dataset('results/cmip6ssp585TradIndeces.nc').sel(year=slice(1850,2099))"
+    "results=xarray.open_dataset('results/cmip6ssp585TradIndecestos.nc').sel(year=slice(1850,2099))"
    ]
   },
   {
