--- a/tests/testCmip6Dates.ipynb
+++ b/tests/testCmip6Dates.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ee5236cc-7428-45d9-a928-f15ebd312d0f",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6a105bc2-91b1-4d3b-9eab-22a223878896",
    "metadata": {
     "tags": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8018dc52-07fe-4c89-adf5-08d2b5ab276e",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b06d28f3-08e7-462f-88fc-799662df1c89",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "19ff8de8-255e-445c-91fd-ae76357c3e25",
    "metadata": {},
    "outputs": [],
@@ -101,10 +101,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "88772243-39f6-421f-af92-965cf2e54992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0['CSIRO-ARCCSS' 'ACCESS-CM2' 'r1i1p1f1_gn' 'r1i1p1f1_gn']\n",
+      "1['CSIRO' 'ACCESS-ESM1-5' 'r1i1p1f1_gn' 'r1i1p1f1_gn']\n",
+      "2['AWI' 'AWI-CM-1-1-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "3['BCC' 'BCC-CSM2-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "Warning: could not replace latitude with lat\n",
+      "Warning: could not replace latitude with lat\n",
+      "Warning: could not replace latitude with lat\n",
+      "4['CAMS' 'CAMS-CSM1-0' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "5['CAS' 'CAS-ESM2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "noMatchpiControltos_Omon\n",
+      "[1, 549, 1, 499]\n",
+      "6['NCAR' 'CESM2' 'r1i1p1f1' 'r10i1p1f1']\n",
+      "7['NCAR' 'CESM2-WACCM' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "8['THU' 'CIESM' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "9['CMCC' 'CMCC-CM2-SR5' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "10['CMCC' 'CMCC-ESM2' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "11['CNRM-CERFACS' 'CNRM-CM6-1' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "12['CNRM-CERFACS' 'CNRM-ESM2-1' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "13['CCCma' 'CanESM5' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "14['CCCma' 'CanESM5-CanOE' 'r1i1p2f1' 'r1i1p2f1']\n",
+      "15['EC-Earth-Consortium' 'EC-Earth3' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "16['EC-Earth-Consortium' 'EC-Earth3-CC' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "17['EC-Earth-Consortium' 'EC-Earth3-Veg' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "noMatchhistoricalts_Amon\n",
+      "[1850, 2014, 1851, 2014]\n",
+      "18['EC-Earth-Consortium' 'EC-Earth3-Veg-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "19['NOAA-GFDL' 'GFDL-CM4' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gr.v20190201|aims3.llnl.gov downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gn.v20190201|aims3.llnl.gov downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gn.v20190201|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gr.v20190201|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gn.v20190201|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gr.v20190201|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gn.v20190201|esgdata.gfdl.noaa.gov downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gr.v20190201|esgdata.gfdl.noaa.gov downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gr.v20190201|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.CMIP.NOAA-GFDL.GFDL-CM4.piControl.r1i1p1f1.Omon.tos.gn.v20190201|esgf-data3.ceda.ac.uk downloading\n",
+      "piControl:\n",
+      "Every dimension needs a coordinate for inferring concatenation order\n",
+      "GFDL-CM4tas_Amonhistoricalr1i1p1f1 file not found on ESGF\n",
+      "historical:\n",
+      "Files (filter term: tas_Amon_.*?GFDL-CM4_historical_r1i1p1f1_.*?_.* ) not found, possibly test name is wrong\n",
+      "GFDL-CM4tas_Amonssp585r1i1p1f1 file not found on ESGF\n",
+      "ssp585:\n",
+      "Files (filter term: tas_Amon_.*?GFDL-CM4_ssp585_r1i1p1f1_.*?_.* ) not found, possibly test name is wrong\n",
+      "20['NOAA-GFDL' 'GFDL-ESM4' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "GFDL-ESM4tas_AmonpiControlr1i1p1f1 file not found on ESGF\n",
+      "piControl:\n",
+      "Files (filter term: tas_Amon_.*?GFDL-ESM4_piControl_r1i1p1f1_.*?_.* ) not found, possibly test name is wrong\n",
+      "21['NASA-GISS' 'GISS-E2-1-G' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "piControl too short\n",
+      "[7550, 7894, 7550, 7894]\n",
+      "noMatchssp585tos_Omon\n",
+      "[1850, 2100, 1850, 2300]\n",
+      "22['MOHC' 'HadGEM3-GC31-LL' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "23['MOHC' 'HadGEM3-GC31-MM' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "24['INM' 'INM-CM4-8' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "25['INM' 'INM-CM5-0' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "26['IPSL' 'IPSL-CM6A-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "piControl:\n",
+      "'Dataset' object has no attribute 'lon'\n",
+      "historical:\n",
+      "'Dataset' object has no attribute 'lon'\n",
+      "ssp585:\n",
+      "'Dataset' object has no attribute 'lon'\n",
+      "27['NIMS-KMA' 'KACE-1-0-G' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "KACE-1-0-Gtos_OmonpiControlr1i1p1f1 file not found on ESGF\n",
+      "piControl:\n",
+      "Files (filter term: tos_Omon_.*?KACE-1-0-G_piControl_r1i1p1f1_.*?_.* ) not found, possibly test name is wrong\n",
+      "Warning: could not replace latitude with lat\n",
+      "Warning: could not replace latitude with lat\n",
+      "28['UA' 'MCM-UA-1-0' 'r1i1p1f1' 'r1i1p1f2']\n",
+      "29['MIROC' 'MIROC-ES2L' 'r1i1p1f2_gn' 'r1i1p1f2_gn']\n",
+      "30['MIROC' 'MIROC6' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "31['MPI-M' 'MPI-ESM1-2-HR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "noMatchssp585tos_Omon\n",
+      "[1850, 2100, 1850, 2024]\n",
+      "32['MPI-M' 'MPI-ESM1-2-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "33['MRI' 'MRI-ESM2-0' 'r1i1p1f1_gn' 'r1i1p1f1_gn']\n",
+      "34['NUIST' 'NESM3' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "noMatchpiControltos_Omon\n",
+      "[500, 999, 1000, 1499]\n",
+      "35['NCC' 'NorESM2-LM' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "ssp585:\n",
+      "Resulting object does not have monotonic global indexes along dimension time\n",
+      "36['NCC' 'NorESM2-MM' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "37['MOHC' 'UKESM1-0-LL' 'r1i1p1f2' 'r1i1p1f2']\n"
+     ]
+    }
+   ],
    "source": [
     "# for all models ....\n",
     "for i in range(0,len(modelSet)):\n",
@@ -167,15 +261,28 @@
     "        \n",
     "        \n",
     "        except Exception as e:\n",
+    "            print(experiment + ':')\n",
     "            print(e)\n",
     "        \n",
     "        "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2de722d0-adf3-4963-bf4b-84d0d049eed8",
+   "metadata": {},
+   "source": [
+    "Those errors all look ok:\n",
+    "\n",
+    "3: BCC - the source file has both a latitude and lat, so it gives this warning but is ok.\n",
+    "\n",
+    "5: Not really sure why times are different between the two, but there you go.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "191ab868-6e74-43c0-a164-943472e075d1",
+   "id": "3e4915f5-41af-487b-ac3c-e3d4fb114c18",
    "metadata": {},
    "outputs": [],
    "source": []
