--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -32,12 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bb485dbe",
    "metadata": {},
    "outputs": [],
    "source": [
     "def anoms(xr):\n",
+    "    '''Calculate an anomaly for the provided, using 1900 to 2000 climatology'''\n",
+    "    \n",
     "    mean=xr.where((xr.time.dt.year>=1900) * (xr.time.dt.year<2000), \n",
     "                             drop=True).mean(dim='time')\n",
     "    return xr-mean"
@@ -51,29 +53,25 @@
    "outputs": [],
    "source": [
     "def sstAnoms(tsXr):\n",
+    "    ''' This is how Wang/Cai calculate anomalies'''\n",
     "    \n",
+    "    #Area of interest for ec Indeces\n",
     "    tsXr=tsXr.where(\n",
     "        (tsXr.lat>=-15) & (tsXr.lat<=15) &\n",
     "        (tsXr.lon>=140) & (tsXr.lon<=280),\n",
     "        drop=True\n",
     "    )\n",
     "    \n",
+    "    #Rechunk so that time is all in one chunk. Not sure this is useful but it does seem to reduce memory needs\n",
     "    tsXr=tsXr.chunk(-1, 'auto', 'auto')\n",
     "    \n",
+    "    #Fit a quadratic and detrend using it\n",
     "    trendXr = tsXr.polyfit('time', 2)\n",
-    "    \n",
     "    trendXr = xarray.polyval(tsXr.time, trendXr.polyfit_coefficients, 'degree')\n",
-    "    \n",
     "    detrendXr=tsXr-trendXr\n",
     "    \n",
-    "    #climatXr=detrendXr.where((detrendXr.time.dt.year>=1900) * (detrendXr.time.dt.year<2000), \n",
-    "    #                         drop=True)\n",
-    "\n",
-    "    \n",
-    "    #sstMeanXr=climatXr.groupby('time.month').mean(dim='time').load()\n",
-    "    \n",
+    "    #calculate monthly anoms.\n",
     "    sstAnomXr=detrendXr.groupby('time.month').apply(anoms)\n",
-    "    \n",
     "    return sstAnomXr\n",
     "    \n"
    ]
@@ -122,26 +120,11 @@
     "    pFit = poly.Polynomial.fit(pc1, pc2, 2)\n",
     "    alpha = pFit.convert().coef[2]\n",
     "    \n",
-    "    eofsXr = solver.eofsAsCorrelation()\n",
+    "    eofsXr = solver.eofs(eofscaling=1, neofs=2)\n",
     "    \n",
     "    pFitDjf = poly.Polynomial.fit(djfPcXr.sel(mode=0), djfPcXr.sel(mode=1), 2)\n",
     "    alphaDjf = pFitDjf.convert().coef[2]\n",
     "    \n",
-    "    if alpha >0:\n",
-    "        pc1=pc1*-1\n",
-    "        pc2 = pc2*-1\n",
-    "        pFit = poly.Polynomial.fit(pc1, pc2, 2)\n",
-    "        alpha = pFit.convert().coef[2]\n",
-    "        pcTimeXr = xarray.concat([-1*pcTimeXr.sel(mode=0), \n",
-    "                               -1*pcTimeXr.sel(mode=1)], \n",
-    "                               'mode')\n",
-    "        eofsXr = xarray.concat([-1*eofsXr.sel(mode=0), \n",
-    "                               -1*eofsXr.sel(mode=1)], \n",
-    "                               'mode')\n",
-    "        \n",
-    "        pFitDjf = poly.Polynomial.fit(-1*djfPcXr.sel(mode=0), -1*djfPcXr.sel(mode=1), 2)\n",
-    "        alphaDjf = pFitDjf.convert().coef[2]\n",
-    "        \n",
     "    cXr=(pcTimeXr.sel(mode=0)+pcTimeXr.sel(mode=1))/numpy.sqrt(2)\n",
     "    eXr=(pcTimeXr.sel(mode=0)-pcTimeXr.sel(mode=1))/numpy.sqrt(2)\n",
     "        \n",
@@ -166,9 +149,12 @@
     "    import cartopy.crs as ccrs\n",
     "    import cartopy.feature as cfeature\n",
     "    import matplotlib.pyplot as plt \n",
+    "    import numpy\n",
     "    \n",
-    "    cs=plt.contourf(da.lon, da.lat, da.values,  \n",
-    "                    transform=ccrs.PlateCarree(), \n",
+    "    precContours=numpy.arange(-0.6,0.61,0.1)\n",
+    "    \n",
+    "    cs=plt.contourf(da.lon, da.lat, da.values, #precContours, \n",
+    "                    transform=ccrs.PlateCarree(), cmap='coolwarm', #extend='both' ,\n",
     "                   center=True)\n",
     "\n",
     "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':')\n",
