wang alphas results

--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -87,8 +87,8 @@
     "    \n",
     "    sstAnomXr.load()\n",
     "    \n",
-    "    weights = numpy.cos(numpy.deg2rad(sstAnomXr.lat)\n",
-    "                ).values[..., numpy.newaxis]\n",
+    "    #weights = numpy.cos(numpy.deg2rad(sstAnomXr.lat)\n",
+    "    #            ).values[..., numpy.newaxis]\n",
     "    \n",
     "    return Eof(sstAnomXr) #, weights=weights)"
    ]
